[project]
authors = [{ name = "Dan Egnor", email = "egnor@ofb.net" }]
description = "Wrapper for subprocess.run() with defaults and logging"
name = "ok-subprocess-runner"
readme = "README.md"
requires-python = ">=3.10"
urls.Homepage = "https://github.com/egnor/ok-py-subprocess-runner#readme"
urls.Repository = "https://github.com/egnor/ok-py-subprocess-runner.git"
version = "0.3"

[build-system]
requires = ["uv_build>=0.9.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy", "pytest", "ruff"]

[tool.mypy]
exclude_gitignore = true
files = "."

[tool.ruff]
line-length = 80

[tool.uv.build-backend]
module-root = ""
